[gd_scene load_steps=7 format=3 uid="uid://dgwj4wlf2tsi5"]

[ext_resource type="Script" path="res://scripts/Loot.gd" id="1_1s6ux"]
[ext_resource type="Theme" uid="uid://c6kvh2v5r71lh" path="res://default_theme.tres" id="2_bgl5n"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vvmu0"]
radius = 56.7186

[sub_resource type="Animation" id="Animation_mk0gt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12)]
}

[sub_resource type="Animation" id="Animation_18vdm"]
resource_name = "float"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(2.08165e-12, 2.08165e-12), Vector2(2.08165e-12, -5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s2vbf"]
_data = {
"RESET": SubResource("Animation_mk0gt"),
"float": SubResource("Animation_18vdm")
}

[node name="Loot" type="Area2D"]
script = ExtResource("1_1s6ux")

[node name="LootSprite" type="Sprite2D" parent="."]
position = Vector2(2.08165e-12, 2.08165e-12)
scale = Vector2(0.5, 0.5)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_vvmu0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
root_node = NodePath("../LootSprite")
autoplay = "float"
libraries = {
"": SubResource("AnimationLibrary_s2vbf")
}

[node name="InteractLabel" type="Label" parent="."]
offset_left = -7.0
offset_top = -71.0
offset_right = 11.0
offset_bottom = -30.0
theme = ExtResource("2_bgl5n")
theme_override_font_sizes/font_size = 48
text = "E"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
